--- a/html/index.html
+++ b/html/index.html
@@ -42,8 +42,9 @@
     <script src="/js/responsive.js" defer></script>
   </head>
   <body>
-    <header><%- include("includes/header.ejs") %></header>
+    <header></header>
     <!-- BACKGROUND PIC -->
     <img src="/images/WNTW_background_main.jpg" alt="Background Fail" id="background-pic" />
+    <h1>World News This Week</h1>
   </body>
 </html>
