--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
-    <title><%= title %></title>
+    <title>WNTW</title>
     <link rel="stylesheet" href="/css/styles.css" />
 
     <!-- FAVICONS -->
@@ -40,11 +40,10 @@
     <link rel="manifest" href="images/site.webmanifest" />
 
     <script src="/js/responsive.js" defer></script>
-  </head>
+  </head> 
   <body>
-    <header></header>
     <!-- BACKGROUND PIC -->
     <img src="/images/WNTW_background_main.jpg" alt="Background Fail" id="background-pic" />
-    <h1>World News This Week</h1>
+    <div id="display-element"></div>
   </body>
 </html>
