--- a/html/index.html
+++ b/html/index.html
@@ -39,8 +39,9 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
     <link rel="manifest" href="images/site.webmanifest" />
 
-    <script src="/js/responsive.js" defer></script>
-  </head> 
+    <script type="module" src="/js/responsive.js" defer></script>
+    <script type="module" src="/js/main.js" defer></script>
+  </head>
   <body>
     <!-- BACKGROUND PIC -->
     <img src="/images/WNTW_background_main.jpg" alt="Background Fail" id="background-pic" />
