changed how width categories, fixed how theyre calculated, fixed background pic, now just need media styles

--- a/html/index.html
+++ b/html/index.html
@@ -39,7 +39,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
 
     <link rel="stylesheet" href="/css/styles.css" />
-    <!-- <link rel="stylesheet" href="/css/media-styles.css" /> -->
+    <link rel="stylesheet" href="/css/media-styles.css" />
     <script type="module" src="/js/responsive.js" defer></script>
     <script type="module" src="/js/main.js" defer></script>
   </head>
