--- a/html/index.html
+++ b/html/index.html
@@ -12,13 +12,13 @@
     <title>WNTW</title>
     <link rel="stylesheet" href="/css/styles.css" />
 
-    <!-- FAVICONS -->
+    <!-- FAVICONS BEGIN-->
     <meta property="og:title" content="World News This Week" />
     <meta property="og:description" content="Sick of Garbage Reporting So Doing It Myself" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://georgethomas.fail" />
+    <meta property="og:url" content="https://wntw.news" />
 
-    <meta property="og:image" content="https://georgethomas.fail/images/WNTW_intro_pic1.png" />
+    <meta property="og:image" content="https://wntw.news/images/WNTW_intro_pic1.png" />
     <meta property="og:image:type" content="image/png" />
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
@@ -28,7 +28,7 @@
     <meta name="twitter:title" content="WNTW" />
     <meta name="twitter:description" content="Sick of Garbage Reporting So Doing It Myself" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image:src" content="https://georgethomas.fail/images/WNTW_intro_pic1.png" />
+    <meta name="twitter:image:src" content="https://wntw.news/images/WNTW_intro_pic1.png" />
 
     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
@@ -37,6 +37,7 @@
     <link rel="icon" href="images/android-chrome-512x512.png" type="image/png" sizes="512x512" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+    <!-- FAVICONS END -->
 
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/media-styles.css" />
