--- a/html/troll.html
+++ b/html/troll.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DONT CLICK</title>
+
+    <!-- FAVICONS BEGIN-->
+    <meta property="og:title" content="World News This Week" />
+    <meta property="og:description" content="Sick of Garbage Reporting So Doing It Myself" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://wntw.news" />
+
+    <meta property="og:image" content="https://wntw.news/images/WNTW_intro_pic1.png" />
+    <meta property="og:image:type" content="image/png" />
+
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:site" content="WNTW" />
+    <meta name="twitter:title" content="WNTW" />
+    <meta name="twitter:description" content="Sick of Garbage Reporting So Doing It Myself" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:image:src" content="https://wntw.news/images/WNTW_intro_pic1.png" />
+
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+
+    <link rel="icon" href="images/android-chrome-192x192.png" type="image/png" sizes="192x192" />
+    <link rel="icon" href="images/android-chrome-512x512.png" type="image/png" sizes="512x512" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+    <!-- FAVICONS END -->
+     
     <link rel="stylesheet" href="/css/troll.css" />
     <script src="/js/troll.js" defer></script>
   </head>
