--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
     />
     <title>WNTW</title>
-    <link rel="stylesheet" href="/css/styles.css" />
 
     <!-- FAVICONS BEGIN-->
     <meta property="og:title" content="World News This Week" />
@@ -21,7 +20,10 @@
     <meta property="og:image" content="https://wntw.news/images/WNTW_intro_pic1.png" />
     <meta property="og:image:type" content="image/png" />
 
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="/images/favicon-16x16.png" sizes="16x16" />
+
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:site" content="WNTW" />
@@ -30,13 +32,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:src" content="https://wntw.news/images/WNTW_intro_pic1.png" />
 
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" href="/images/android-chrome-192x192.png" type="image/png" sizes="192x192" />
+    <link rel="icon" href="/images/android-chrome-512x512.png" type="image/png" sizes="512x512" />
 
-    <link rel="icon" href="images/android-chrome-192x192.png" type="image/png" sizes="192x192" />
-    <link rel="icon" href="images/android-chrome-512x512.png" type="image/png" sizes="512x512" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/site.webmanifest" />
     <!-- FAVICONS END -->
 
     <link rel="stylesheet" href="/css/styles.css" />
