favicons somehow fixed, no idea how

--- a/html/index.html
+++ b/html/index.html
@@ -11,32 +11,32 @@
     />
     <title>WNTW</title>
 
-    <!-- FAVICONS - Must be placed right after title -->
+    <!-- FAVICONS BEGIN -->
+    <!-- Open Graph / Facebook -->
     <meta property="og:title" content="World News This Week" />
     <meta property="og:description" content="Sick of Garbage Reporting So Doing It Myself" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://wntw.news" />
-
     <meta property="og:image" content="https://wntw.news/images/WNTW_intro_pic1.png" />
     <meta property="og:image:type" content="image/png" />
-
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+
+    <!-- Twitter -->
     <meta name="twitter:site" content="WNTW" />
     <meta name="twitter:title" content="WNTW" />
     <meta name="twitter:description" content="Sick of Garbage Reporting So Doing It Myself" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image:src" content="https://wntw.news/images/WNTW_intro_pic1.png" />
 
-    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-
-    <link rel="icon" href="images/android-chrome-192x192.png" type="image/png" sizes="192x192" />
-    <link rel="icon" href="images/android-chrome-512x512.png" type="image/png" sizes="512x512" />
-
-    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
-    <link rel="manifest" href="images/site.webmanifest" />
+    <!-- FAVICONS LINKS -->
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/images/favicon-48x48.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png" />
+    <link rel="manifest" href="/images/site.webmanifest" />
+    <!-- FAVICONS END -->
 
     <link rel="stylesheet" href="/css/styles.css" />
     <link rel="stylesheet" href="/css/media-styles.css" />
