changed phone display back to how i had it

--- a/html/500.html
+++ b/html/500.html
@@ -12,6 +12,7 @@
     <title>500 ERROR</title>
 
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/css/media-styles.css" />
   </head>
   <body>
     <h3><a href="/">UNDER CONSTRUCTION</a></h3>
